[project]
name = "emojies-parser"
version = "0.1.0"
description = "Easily mass-download emojis from any Discord server from just a link!"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.13.2",
    "pillow>=12.0.0",
    "pydoll-python>=2.14.0",
    "rich>=14.2.0",
]

[dependency-groups]
dev = []
